<resources>
    <string name="app_name">Colocviu1_13</string>
    <string name="north">North</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="south">South</string>
    <string name="north_east_south_west">North, east, south, west</string>
    <string name="navigate_to_secondary_activity">Navigate_to_secondary_activity</string>
    <string name="resigter">RESIGTER</string>
    <string name="cancel">CANCEL</string>
</resources>
